@@ -1,25 +1,45 @@
 package org.homio.app.rest.widget;
 
-import static org.homio.bundle.api.util.Constants.ADMIN_ROLE;
+import static org.homio.api.util.Constants.ADMIN_ROLE_AUTHORIZE;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import jakarta.validation.Valid;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
-import javax.annotation.security.RolesAllowed;
-import javax.validation.Valid;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.SneakyThrows;
 import lombok.extern.log4j.Log4j2;
-import net.rossillo.spring.web.mvc.CacheControl;
-import net.rossillo.spring.web.mvc.CachePolicy;
+import lombok.val;
+import org.homio.addon.camera.entity.BaseVideoEntity;
+import org.homio.api.entity.BaseEntity;
+import org.homio.api.entity.EntityFieldMetadata;
+import org.homio.api.entity.storage.BaseFileSystemEntity;
+import org.homio.api.entity.widget.ability.HasGetStatusValue;
+import org.homio.api.entity.widget.ability.HasSetStatusValue;
+import org.homio.api.exception.NotFoundException;
+import org.homio.api.exception.ServerException;
+import org.homio.api.fs.FileSystemProvider;
+import org.homio.api.fs.TreeNode;
+import org.homio.api.model.OptionModel;
+import org.homio.api.ui.action.UIActionHandler;
+import org.homio.api.ui.field.action.HasDynamicContextMenuActions;
+import org.homio.api.ui.field.action.v1.UIInputBuilder;
+import org.homio.api.ui.field.action.v1.UIInputEntity;
+import org.homio.api.util.DataSourceUtil;
+import org.homio.api.util.Lang;
+import org.homio.api.widget.WidgetBaseTemplate;
+import org.homio.api.widget.WidgetJSBaseTemplate;
+import org.homio.app.config.cacheControl.CacheControl;
+import org.homio.app.config.cacheControl.CachePolicy;
 import org.homio.app.manager.ScriptService;
 import org.homio.app.manager.WidgetService;
 import org.homio.app.manager.common.EntityContextImpl;
@@ -45,24 +65,8 @@ import org.homio.app.model.entity.widget.impl.video.sourceResolver.WidgetVideoSo
 import org.homio.app.model.rest.WidgetDataRequest;
 import org.homio.app.rest.widget.WidgetChartsController.SingleValueData;
 import org.homio.app.utils.JavaScriptBuilderImpl;
-import org.homio.bundle.api.entity.BaseEntity;
-import org.homio.bundle.api.entity.storage.BaseFileSystemEntity;
-import org.homio.bundle.api.entity.widget.ability.HasSetStatusValue;
-import org.homio.bundle.api.exception.NotFoundException;
-import org.homio.bundle.api.exception.ServerException;
-import org.homio.bundle.api.fs.FileSystemProvider;
-import org.homio.bundle.api.fs.TreeNode;
-import org.homio.bundle.api.model.OptionModel;
-import org.homio.bundle.api.ui.action.UIActionHandler;
-import org.homio.bundle.api.ui.field.action.HasDynamicContextMenuActions;
-import org.homio.bundle.api.ui.field.action.v1.UIInputBuilder;
-import org.homio.bundle.api.ui.field.action.v1.UIInputEntity;
-import org.homio.bundle.api.util.DataSourceUtil;
-import org.homio.bundle.api.util.Lang;
-import org.homio.bundle.api.video.BaseFFMPEGVideoStreamEntity;
-import org.homio.bundle.api.widget.WidgetBaseTemplate;
-import org.homio.bundle.api.widget.WidgetJSBaseTemplate;
 import org.json.JSONObject;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -93,6 +97,24 @@ public class WidgetController {
         this.widgetService = widgetService;
         this.videoSourceResolvers = videoSourceResolvers;
         this.timeSeriesUtil = new TimeSeriesUtil(entityContext);
+    }
+
+    @PostMapping("/sources")
+    public Map<String, Object> getSources(@Valid @RequestBody Sources request) {
+        Map<String, Object> result = new HashMap<>();
+        for (String source : request.sources) {
+            DataSourceUtil.DataSourceContext dsContext = DataSourceUtil.getSource(entityContext, source);
+            if (dsContext.getSource() instanceof HasGetStatusValue) {
+                val valueRequest = new HasGetStatusValue.GetStatusValueRequest(entityContext, null);
+                result.put(source, ((HasGetStatusValue) dsContext.getSource()).getStatusValue(valueRequest));
+                timeSeriesUtil.addListenValueIfRequire(true, "dashboard",
+                    dsContext.getSource(), null, null, source,
+                    object -> ((HasGetStatusValue) dsContext.getSource()).getStatusValue(valueRequest));
+            } else {
+                throw new IllegalArgumentException("Unable to get value from non source entity");
+            }
+        }
+        return result;
     }
 
     @SneakyThrows
@@ -154,16 +176,16 @@ public class WidgetController {
     }
 
     @PostMapping("/video/action")
-    @RolesAllowed(ADMIN_ROLE)
+    @PreAuthorize(ADMIN_ROLE_AUTHORIZE)
     public void fireVideoAction(@RequestBody VideoActionRequest request) {
         WidgetVideoSeriesEntity series = getSeriesEntity(request);
         try {
-            BaseFFMPEGVideoStreamEntity streamEntity = entityContext.getEntity(series.getValueDataSource());
-            if (streamEntity == null) {
+            BaseVideoEntity entity = entityContext.getEntity(series.getValueDataSource());
+            if (entity == null) {
                 throw new NotFoundException("video.error.seriesNotFound");
             }
 
-            UIInputBuilder uiInputBuilder = streamEntity.getService().assembleActions();
+            UIInputBuilder uiInputBuilder = entity.getService().assembleActions();
             UIActionHandler actionHandler = uiInputBuilder.findActionHandler(request.name);
             if (actionHandler == null) {
                 throw new NotFoundException("video.error.actionNotFound");
@@ -184,7 +206,7 @@ public class WidgetController {
     }
 
     @PostMapping("/value/update")
-    @RolesAllowed(ADMIN_ROLE)
+    @PreAuthorize(ADMIN_ROLE_AUTHORIZE)
     public void updateValue(@RequestBody SingleValueRequest<Object> request) {
         HasSetSingleValueDataSource source = getEntity(request.entityID);
         DataSourceUtil.setValue(entityContext, source.getSetValueDataSource(),
@@ -202,7 +224,7 @@ public class WidgetController {
     }
 
     @PostMapping("/slider/update")
-    @RolesAllowed(ADMIN_ROLE)
+    @PreAuthorize(ADMIN_ROLE_AUTHORIZE)
     public void handleSlider(@RequestBody SingleValueRequest<Number> request) {
         WidgetSliderSeriesEntity series = getSeriesEntity(request);
         DataSourceUtil.setValue(entityContext, series.getSetValueDataSource(), series.getSetValueDynamicParameterFields(),
@@ -220,7 +242,7 @@ public class WidgetController {
     }
 
     @PostMapping("/display/update")
-    @RolesAllowed(ADMIN_ROLE)
+    @PreAuthorize(ADMIN_ROLE_AUTHORIZE)
     public void handleButtonClick(@RequestBody SingleValueRequest<String> request) {
         WidgetDisplayEntity entity = getEntity(request.entityID);
         DataSourceUtil.setValue(entityContext, entity.getSetValueDataSource(), entity.getSetValueDynamicParameterFields(),
@@ -250,35 +272,27 @@ public class WidgetController {
     }
 
     @PostMapping("/colors/update")
-    @RolesAllowed(ADMIN_ROLE)
+    @PreAuthorize(ADMIN_ROLE_AUTHORIZE)
     public void updateColorsValue(@RequestBody ColorValueRequest request) {
         WidgetColorEntity entity = entityContext.getEntityRequire(request.entityID);
         switch (request.type) {
-            case colorTemp:
-                DataSourceUtil.setValue(entityContext,
-                    entity.getColorTemperatureSetValueDataSource(),
-                    entity.getDynamicParameterFields("colorTemp"), request.value);
-                break;
-            case color:
-                DataSourceUtil.setValue(entityContext,
-                    entity.getColorSetValueDataSource(),
-                    entity.getDynamicParameterFields("color"), request.value);
-                break;
-            case onOff:
-                DataSourceUtil.setValue(entityContext,
-                    entity.getOnOffSetValueDataSource(),
-                    entity.getDynamicParameterFields("onOff"), request.value);
-                break;
-            case brightness:
-                DataSourceUtil.setValue(entityContext,
-                    entity.getBrightnessSetValueDataSource(),
-                    entity.getDynamicParameterFields("brightness"), request.value);
-                break;
+            case colorTemp -> DataSourceUtil.setValue(entityContext,
+                entity.getColorTemperatureSetValueDataSource(),
+                entity.getDynamicParameterFields("colorTemp"), request.value);
+            case color -> DataSourceUtil.setValue(entityContext,
+                entity.getColorSetValueDataSource(),
+                entity.getDynamicParameterFields("color"), request.value);
+            case onOff -> DataSourceUtil.setValue(entityContext,
+                entity.getOnOffSetValueDataSource(),
+                entity.getDynamicParameterFields("onOff"), request.value);
+            case brightness -> DataSourceUtil.setValue(entityContext,
+                entity.getBrightnessSetValueDataSource(),
+                entity.getDynamicParameterFields("brightness"), request.value);
         }
     }
 
     @PostMapping("/toggle/update")
-    @RolesAllowed(ADMIN_ROLE)
+    @PreAuthorize(ADMIN_ROLE_AUTHORIZE)
     public void updateToggleValue(@RequestBody SingleValueRequest<Boolean> request) {
         WidgetToggleSeriesEntity series = getSeriesEntity(request);
         DataSourceUtil.setValue(entityContext, series.getSetValueDataSource(), series.getSetValueDynamicParameterFields(),
@@ -295,8 +309,7 @@ public class WidgetController {
     @GetMapping("/tab/{tabId}")
     public List<WidgetEntity> getWidgetsInTab(@PathVariable("tabId") String tabId) {
         List<WidgetBaseEntity> widgets = entityContext.findAll(WidgetBaseEntity.class).stream()
-                                                      .filter(w -> w.getWidgetTabEntity().getEntityID().equals(tabId))
-                                                      .collect(Collectors.toList());
+                                                      .filter(w -> w.getWidgetTabEntity().getEntityID().equals(tabId)).toList();
 
         List<WidgetEntity> result = new ArrayList<>();
         for (WidgetBaseEntity<?> widget : widgets) {
@@ -310,6 +323,107 @@ public class WidgetController {
         }
 
         return result;
+    }
+
+    @PostMapping("/create/{tabId}/{type}")
+    @PreAuthorize(ADMIN_ROLE_AUTHORIZE)
+    public BaseEntity<?> createWidget(@PathVariable("tabId") String tabId, @PathVariable("type") String type) throws Exception {
+        log.debug("Request creating widget entity by type: <{}> in tabId <{}>", type, tabId);
+        WidgetTabEntity widgetTabEntity = entityContext.getEntity(tabId);
+        if (widgetTabEntity == null) {
+            throw new NotFoundException("Unable to find tab with tabId: " + tabId);
+        }
+
+        Class<? extends EntityFieldMetadata> typeClass = EntityContextImpl.uiFieldClasses.get(type);
+        WidgetBaseEntity<?> baseEntity = (WidgetBaseEntity<?>) typeClass.getConstructor().newInstance();
+
+        baseEntity.setWidgetTabEntity(widgetTabEntity);
+        return entityContext.save(baseEntity);
+    }
+
+    @PreAuthorize(ADMIN_ROLE_AUTHORIZE)
+    @PostMapping("/create/{tabId}/{type}/{addon}")
+    public BaseEntity<?> createExtraWidget(
+        @PathVariable("tabId") String tabId,
+        @PathVariable("type") String type,
+        @PathVariable("addon") String addon) {
+        log.debug("Request creating extra widget entity by type: <{}> in tabId <{}>, addon: <{}>", type, tabId, addon);
+        WidgetTabEntity widgetTabEntity = entityContext.getEntity(tabId);
+        if (widgetTabEntity == null) {
+            throw new NotFoundException("Unable to find tab with tabId: " + tabId);
+        }
+
+        Collection<WidgetBaseTemplate> widgets = entityContext.getBeansOfTypeByAddons(WidgetBaseTemplate.class).get(addon);
+        if (widgets == null) {
+            throw new NotFoundException("Unable to find addon: " + tabId + " or widgets in addon");
+        }
+        WidgetBaseTemplate template = widgets.stream()
+                                             .filter(w -> w.getClass().getSimpleName().equals(type))
+                                             .findAny()
+                                             .orElseThrow(() -> new NotFoundException("Unable to find widget: " + type + " in addon: " + addon));
+
+        String js = template.toJavaScript();
+        String params = "";
+        boolean paramReadOnly = false;
+        if (js == null) {
+            if (template instanceof WidgetJSBaseTemplate widgetJSBaseTemplate) {
+                JavaScriptBuilderImpl javaScriptBuilder = new JavaScriptBuilderImpl(template.getClass());
+                widgetJSBaseTemplate.createWidget(javaScriptBuilder);
+                js = javaScriptBuilder.build();
+                paramReadOnly = javaScriptBuilder.isJsonReadOnly();
+                params = javaScriptBuilder.getJsonParams().toString();
+            }
+        }
+
+        WidgetJavaJsEntity widgetJavaJsEntity = new WidgetJavaJsEntity()
+            .setJavaScriptParameters(params)
+            .setJavaScriptParametersReadOnly(paramReadOnly)
+            .setJavaScript(js);
+
+        //TODO: fix:::  widgetJsEntity.setWidgetTabEntity(widgetTabEntity).setFieldFetchType(addon + ":" + template.getClass().getSimpleName());
+
+        return null; // TODO: fix::::entityContext.save(widgetJsEntity);
+    }
+
+    @GetMapping("/tab")
+    public List<OptionModel> getWidgetTabs() {
+        return entityContext.findAll(WidgetTabEntity.class).stream().sorted()
+                            .map(t -> OptionModel.of(t.getEntityID(), t.getName()))
+                            .collect(Collectors.toList());
+    }
+
+    @SneakyThrows
+    @PostMapping("/tab/{name}")
+    @PreAuthorize(ADMIN_ROLE_AUTHORIZE)
+    public OptionModel createWidgetTab(@PathVariable("name") String name) {
+        BaseEntity<?> widgetTab = entityContext.getEntity(WidgetTabEntity.PREFIX + name);
+        if (widgetTab == null) {
+            widgetTab = entityContext.save(new WidgetTabEntity().setEntityID(name));
+            return OptionModel.of(widgetTab.getEntityID(), widgetTab.getName());
+        }
+        throw new ServerException("Widget tab with same name already exists");
+    }
+
+    @SneakyThrows
+    @PutMapping("/tab/{tabId}/{name}")
+    @PreAuthorize(ADMIN_ROLE_AUTHORIZE)
+    public void renameWidgetTab(@PathVariable("tabId") String tabId, @PathVariable("name") String name) {
+        WidgetTabEntity entity = getWidgetTabEntity(tabId);
+        WidgetTabEntity newEntity = entityContext.getEntityByName(name, WidgetTabEntity.class);
+
+        if (newEntity == null) {
+            entityContext.save(entity.setName(name));
+        }
+    }
+
+    @DeleteMapping("/tab/{tabId}")
+    @PreAuthorize(ADMIN_ROLE_AUTHORIZE)
+    public void deleteWidgetTab(@PathVariable("tabId") String tabId) {
+        if (WidgetTabEntity.GENERAL_WIDGET_TAB_NAME.equals(tabId)) {
+            throw new IllegalStateException("Unable to delete main tab");
+        }
+        WidgetTabEntity widgetTabEntity = getWidgetTabEntity(tabId);
+        entityContext.delete(widgetTabEntity);
     }
 
     private void updateWidgetBeforeReturnToUI(WidgetBaseEntity<?> widget) {
@@ -330,106 +444,6 @@ public class WidgetController {
         }*/
     }
 
-    @PostMapping("/create/{tabId}/{type}")
-    @RolesAllowed(ADMIN_ROLE)
-    public BaseEntity<?> createWidget(@PathVariable("tabId") String tabId, @PathVariable("type") String type) throws Exception {
-        log.debug("Request creating widget entity by type: <{}> in tabId <{}>", type, tabId);
-        WidgetTabEntity widgetTabEntity = entityContext.getEntity(tabId);
-        if (widgetTabEntity == null) {
-            throw new NotFoundException("Unable to find tab with tabId: " + tabId);
-        }
-
-        Class<? extends BaseEntity> typeClass = EntityContextImpl.baseEntityNameToClass.get(type);
-        WidgetBaseEntity<?> baseEntity = (WidgetBaseEntity<?>) typeClass.getConstructor().newInstance();
-
-        baseEntity.setWidgetTabEntity(widgetTabEntity);
-        return entityContext.save(baseEntity);
-    }
-
-    @RolesAllowed(ADMIN_ROLE)
-    @PostMapping("/create/{tabId}/{type}/{bundle}")
-    public BaseEntity<?> createExtraWidget(
-        @PathVariable("tabId") String tabId,
-        @PathVariable("type") String type,
-        @PathVariable("bundle") String bundle) {
-        log.debug("Request creating extra widget entity by type: <{}> in tabId <{}>, bundle: <{}>", type, tabId, bundle);
-        WidgetTabEntity widgetTabEntity = entityContext.getEntity(tabId);
-        if (widgetTabEntity == null) {
-            throw new NotFoundException("Unable to find tab with tabId: " + tabId);
-        }
-
-        Collection<WidgetBaseTemplate> widgets = entityContext.getBeansOfTypeByBundles(WidgetBaseTemplate.class).get(bundle);
-        if (widgets == null) {
-            throw new NotFoundException("Unable to find bundle: " + tabId + " or widgets in bundle");
-        }
-        WidgetBaseTemplate template = widgets.stream()
-                                             .filter(w -> w.getClass().getSimpleName().equals(type))
-                                             .findAny()
-                                             .orElseThrow(() -> new NotFoundException("Unable to find widget: " + type + " in bundle: " + bundle));
-
-        String js = template.toJavaScript();
-        String params = "";
-        boolean paramReadOnly = false;
-        if (js == null) {
-            if (template instanceof WidgetJSBaseTemplate) {
-                WidgetJSBaseTemplate widgetJSBaseTemplate = (WidgetJSBaseTemplate) template;
-                JavaScriptBuilderImpl javaScriptBuilder = new JavaScriptBuilderImpl(template.getClass());
-                widgetJSBaseTemplate.createWidget(javaScriptBuilder);
-                js = javaScriptBuilder.build();
-                paramReadOnly = javaScriptBuilder.isJsonReadOnly();
-                params = javaScriptBuilder.getJsonParams().toString();
-            }
-        }
-
-        WidgetJavaJsEntity widgetJavaJsEntity = new WidgetJavaJsEntity().setJavaScriptParameters(params).setJavaScriptParametersReadOnly(paramReadOnly)
-                                                                        .setJavaScript(js);
-
-        //TODO: fix:::  widgetJsEntity.setWidgetTabEntity(widgetTabEntity).setFieldFetchType(bundle + ":" + template.getClass().getSimpleName());
-
-        return null; // TODO: fix::::entityContext.save(widgetJsEntity);
-    }
-
-    @GetMapping("/tab")
-    public List<OptionModel> getWidgetTabs() {
-        return entityContext.findAll(WidgetTabEntity.class).stream().sorted()
-                            .map(t -> OptionModel.of(t.getEntityID(), t.getName()))
-                            .collect(Collectors.toList());
-    }
-
-    @SneakyThrows
-    @PostMapping("/tab/{name}")
-    @RolesAllowed(ADMIN_ROLE)
-    public OptionModel createWidgetTab(@PathVariable("name") String name) {
-        BaseEntity<?> widgetTab = entityContext.getEntity(WidgetTabEntity.PREFIX + name);
-        if (widgetTab == null) {
-            widgetTab = entityContext.save(new WidgetTabEntity().setEntityID(name));
-            return OptionModel.of(widgetTab.getEntityID(), widgetTab.getName());
-        }
-        throw new ServerException("Widget tab with same name already exists");
-    }
-
-    @SneakyThrows
-    @PutMapping("/tab/{tabId}/{name}")
-    @RolesAllowed(ADMIN_ROLE)
-    public void renameWidgetTab(@PathVariable("tabId") String tabId, @PathVariable("name") String name) {
-        WidgetTabEntity entity = getWidgetTabEntity(tabId);
-        WidgetTabEntity newEntity = entityContext.getEntityByName(name, WidgetTabEntity.class);
-
-        if (newEntity == null) {
-            entityContext.save(entity.setName(name));
-        }
-    }
-
-    @DeleteMapping("/tab/{tabId}")
-    @RolesAllowed(ADMIN_ROLE)
-    public void deleteWidgetTab(@PathVariable("tabId") String tabId) {
-        if (WidgetTabEntity.GENERAL_WIDGET_TAB_NAME.equals(tabId)) {
-            throw new IllegalStateException("Unable to delete main tab");
-        }
-        WidgetTabEntity widgetTabEntity = getWidgetTabEntity(tabId);
-        entityContext.delete(widgetTabEntity);
-    }
-
     private WidgetTabEntity getWidgetTabEntity(String tabId) {
         BaseEntity<?> baseEntity = entityContext.getEntity(tabId);
         if (baseEntity instanceof WidgetTabEntity) {
@@ -439,7 +453,7 @@ public class WidgetController {
     }
 
     private <T extends WidgetSeriesEntity> T getSeriesEntity(SingleValueRequest<?> request) {
-        WidgetBaseEntityAndSeries entity = entityContext.getEntity(request.entityID);
+        WidgetBaseEntityAndSeries entity = entityContext.getEntityRequire(request.entityID);
         T series = ((Set<T>) entity.getSeries()).stream().filter(s -> s.getEntityID().equals(request.seriesEntityID)).findAny().orElse(null);
         if (series == null) {
             throw new NotFoundException("Unable to find series: " + request.seriesEntityID + " for entity: " + entity.getTitle());
@@ -520,5 +534,11 @@ public class WidgetController {
         private enum Type {
             color, colorTemp, onOff, brightness
         }
+    }
+
+    @Setter
+    private static class Sources {
+
+        private String[] sources;
     }
 }
